Fix emit_store_flag_force () function to fix ICE in int_mode_for_mode,

at stor-layout.c:403 with arm-linux-gnueabi.

*** gcc/ChangeLog ***

2018-02-16  Sudakshina Das  <sudi.das@arm.com>

	Backport from trunk
	2018-01-10  Sudakshina Das  <sudi.das@arm.com>

	PR target/82096
	* expmed.c (emit_store_flag_force): Swap if const op0
	and change VOIDmode to mode of op0.

*** gcc/testsuite/ChangeLog ***

2018-02-16  Sudakshina Das  <sudi.das@arm.com>

	Backport from trunk
	2018-01-12  Sudakshina Das  <sudi.das@arm.com>

	* gcc.c-torture/compile/pr82096.c: Add dg-skip-if
	directive.

	Backport from trunk
	2018-01-10  Sudakshina Das  <sudi.das@arm.com>

	PR target/82096
	* gcc.c-torture/compile/pr82096.c: New test.

From-SVN: r257741